@@ -1,3 +1,11 @@
+2013-04-16  Jeremy Bennett <jeremy.bennett@embecosm.com>
+
+	* build-all.sh: Add --isa-v1, --isa-v2 and --config-extra options
+	to set ISA_CPU and CONFIG_EXTRA environment variables.
+	* build-elf32.sh, build-uclibc.sh: Make use of ISA_CPU and
+	CONFIG_EXTRA environment variables.
+	* build-kernel.sh: Updated for 4.8 Linux build/
+
 2013-04-10  Jeremy Bennett <jeremy.bennett@embecosm.com>
 
 	* diff-all-sh: New script.
